did header and filter component and set css properties for them

--- a/src/index.css
+++ b/src/index.css
@@ -15,15 +15,72 @@ body {
   background-color: hsl(207, 26%, 17%);
   color: hsl(0, 0%, 100%);
 }
+/* Header */
+.header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 40px;
+  background-color: hsl(209, 23%, 22%);
+}
 
+.header h1{
+  font-size: 18px;
+}
+
+/* Filter */
+.filter{
+  padding: 30px 20px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+}
+
+.filter .form-control{
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+.filter .form-control input{
+  background-color: hsl(209, 23%, 22%);
+  border: none;
+  outline: none;
+  padding: 15px;
+  border-radius: 5px;
+  font-family: inherit;
+  width: 100%;
+}
+
+.filter .form-control input::placeholder{
+  color: white;
+}
+
+.filter .region-filter{
+  width: 100%;
+}
+
+.filter .region-filter select{
+  background-color: hsl(209, 23%, 22%);
+  color: white;
+  font-family: inherit;
+  padding: 15px;
+  border-radius: 5px;
+  border: none;
+}
+
+
+/* Grid */
 .grid {
   display: grid;
   grid-template-columns: 1fr;
   gap: 40px;
+  padding: 25px 40px;
 }
 
 .grid article img{
   border-radius: 5px 5px 0 0;
+  width: max-content;
 }
 
 .details{
@@ -48,12 +105,35 @@ body {
 @media screen and (min-width: 640px) {
   .grid {
     grid-template-columns: repeat(2, 1fr);
+    padding: 25px 20px;
   }
+
+  .filter{
+    flex-direction: row;
+  }
+
+  .filter .form-control {
+    width: 350px;
+    margin: 0;
+  }
+
+  .filter .region-filter{
+  width: 140px;
+}
 }
 
 @media screen and (min-width: 768px) {
+  .header{
+    padding: 20px 40px;
+  }
+
+  .filter{
+    padding: 30px 40px 5px;
+  }
+
   .grid {
     grid-template-columns: repeat(3, 1fr);
+    padding: 25px 40px;
   }
 }
 
