--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,19 @@ body {
   font-size: 18px;
 }
 
+.header div{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.header svg{
+  font-size: 22px;
+  padding-right: 5px;
+}
+
+
+
 /* Filter */
 .filter{
   padding: 30px 20px 0;
@@ -71,74 +84,60 @@ body {
 
 
 /* Grid */
-.grid {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 40px;
-  padding: 25px 40px;
+.countries {
+  display: flex;
+  gap: 35px;
+  padding: 40px 0px;
+  max-width: 1400px;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 0 auto;
 }
 
-.grid article img{
+
+.country{
+  width: 300px;
+  box-shadow: 0 3px 15px rgba(0,0,0,.2);
+  background-color: hsl(209, 23%, 22%);
+  height: 340px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.country .flag{
+  height: 170px;
+  width: 100%;
   border-radius: 5px 5px 0 0;
-  width: max-content;
+}
+
+.country .flag img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .details{
   background-color: hsl(209, 23%, 22%);
   padding: 20px;
-  margin-top: -10px;
   border-radius: 0 0 5px 5px;
 }
 
 .details h3{
   padding-bottom: 15px;
+
 }
 
 .details h4{
   font-weight: 600;
+  padding-top: 5px;
 }
 
 .details h4 span{
   font-weight: 300;
 }
 
-@media screen and (min-width: 640px) {
-  .grid {
-    grid-template-columns: repeat(2, 1fr);
-    padding: 25px 20px;
-  }
 
-  .filter{
-    flex-direction: row;
-  }
 
-  .filter .form-control {
-    width: 350px;
-    margin: 0;
-  }
 
-  .filter .region-filter{
-  width: 140px;
-}
-}
 
-@media screen and (min-width: 768px) {
-  .header{
-    padding: 20px 40px;
-  }
-
-  .filter{
-    padding: 30px 40px 5px;
-  }
-
-  .grid {
-    grid-template-columns: repeat(3, 1fr);
-    padding: 25px 40px;
-  }
-}
-
-@media screen and (min-width: 992px) {
-  .grid {
-    grid-template-columns: repeat(4, 1fr);
-  }
-}
