--- a/src/index.css
+++ b/src/index.css
@@ -16,33 +16,33 @@ body {
   color: hsl(0, 0%, 100%);
 }
 /* Header */
-.header{
+.header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px 40px;
+  padding: 20px 25px;
   background-color: hsl(209, 23%, 22%);
 }
 
-.header h1{
-  font-size: 18px;
+.header h1 {
+  font-size: 12px;
 }
 
-.header div{
+.mode {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  font-size: 12px;
+  align-items: center;
 }
 
-.header svg{
+.header svg {
   font-size: 22px;
   padding-right: 5px;
 }
 
-
-
 /* Filter */
-.filter{
+.filter {
   padding: 30px 20px 0;
   display: flex;
   justify-content: space-between;
@@ -50,12 +50,12 @@ body {
   flex-direction: column;
 }
 
-.filter .form-control{
+.filter .form-control {
   width: 100%;
   margin-bottom: 30px;
 }
 
-.filter .form-control input{
+.filter .form-control input {
   background-color: hsl(209, 23%, 22%);
   border: none;
   outline: none;
@@ -65,15 +65,15 @@ body {
   width: 100%;
 }
 
-.filter .form-control input::placeholder{
+.filter .form-control input::placeholder {
   color: white;
 }
 
-.filter .region-filter{
+.filter .region-filter {
   width: 100%;
 }
 
-.filter .region-filter select{
+.filter .region-filter select {
   background-color: hsl(209, 23%, 22%);
   color: white;
   font-family: inherit;
@@ -82,8 +82,7 @@ body {
   border: none;
 }
 
-
-/* Grid */
+/* Countries */
 .countries {
   display: flex;
   gap: 35px;
@@ -95,49 +94,127 @@ body {
   margin: 0 auto;
 }
 
-
-.country{
+.country {
   width: 300px;
-  box-shadow: 0 3px 15px rgba(0,0,0,.2);
+  box-shadow: 0 3px 15px rgba(0, 0, 0, 0.2);
   background-color: hsl(209, 23%, 22%);
   height: 340px;
   cursor: pointer;
   border-radius: 5px;
 }
 
-.country .flag{
+.country .flag {
   height: 170px;
   width: 100%;
   border-radius: 5px 5px 0 0;
 }
 
-.country .flag img{
+.country .flag img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.details{
+.details {
   background-color: hsl(209, 23%, 22%);
   padding: 20px;
   border-radius: 0 0 5px 5px;
 }
 
-.details h3{
+.details h3 {
   padding-bottom: 15px;
-
 }
 
-.details h4{
+.details h4 {
   font-weight: 600;
   padding-top: 5px;
 }
 
-.details h4 span{
+.details h4 span {
   font-weight: 300;
 }
 
+/* CountryDetail */
 
+.btn-back, .border-country {
+  border: none;
+  border-radius: 2px;
+  background-color: hsl(209, 23%, 22%);
+  color: rgba(255, 255, 255, 0.816);
+  width: 100px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+  box-shadow: 0px 0px 3px 2px #1c1c1c3a;
+}
 
+.btn-back p {
+  font-weight: 300;
+  font-size: 15px;
+}
 
+.btn-back svg {
+  padding-right: 6px;
+  font-size: 25px;
+}
 
+.country-detail {
+  display: flex;
+  flex-direction: column;
+  padding: 25px;
+  height: 100vh;
+  gap: 50px;
+}
+
+.country-detail-body {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.img-container {
+  width: 100%;
+  object-fit: 100%;
+}
+
+.info-container{
+  display: flex;
+  flex-direction: column;
+}
+
+.info-container h3{
+  padding-bottom: 20px;
+  font-weight: 800;
+  font-size: 20px;
+}
+
+.info-container p{
+  padding-bottom: 10px;
+  font-weight: 600;
+  font-size: 15px;
+}
+
+.value{
+  font-weight: 300;
+  padding-left: 4px;
+}
+
+.border-title{
+  font-size: 16px;
+  font-weight: 600;
+  margin: 20px 0 15px;
+}
+
+.border-countries{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.border-country{
+  width: 80px;
+  font-size: 14px;
+  font-weight: 300;
+}
