--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,34 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap");
 
+:root {
+  --dark-mode-elements: hsl(209, 23%, 22%);
+  --dark-mode-bg: hsl(207, 26%, 17%);
+  --light-mode-elements: white;
+  --light-mode-bg: hsl(0, 0%, 98%);
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+
 img {
   max-width: 100%;
 }
 
-body {
+.app {
   font-family: "Nunito Sans", sans-serif;
-  background-color: hsl(207, 26%, 17%);
+  background-color: var(--dark-mode-bg);
   color: hsl(0, 0%, 100%);
+  min-height: 100vh;
+  height: 100%;
+}
+
+.app.lightMode {
+  background-color: var(--light-mode-bg);
+  color: var(--dark-mode-bg);
 }
 /* Header */
 .header {
@@ -21,19 +36,26 @@ body {
   align-items: center;
   justify-content: space-between;
   padding: 20px 25px;
-  background-color: hsl(209, 23%, 22%);
+  background-color: var(--dark-mode-elements);
+  box-shadow: 0px 0px 7px 0px #00000063;
+}
+
+.header.lightMode {
+  background-color: var(--light-mode-bg);
+  color: var(--dark-mode-bg);
 }
 
 .header h1 {
-  font-size: 12px;
+  font-size: 15px;
 }
 
 .mode {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  font-size: 12px;
+  font-size: 15px;
   align-items: center;
+  cursor: pointer;
 }
 
 .header svg {
@@ -55,8 +77,13 @@ body {
   margin-bottom: 30px;
 }
 
+.form-control.lightMode {
+  background-color: var(--light-mode-bg);
+  color: var(--dark-mode-bg);
+}
+
 .filter .form-control input {
-  background-color: hsl(209, 23%, 22%);
+  background-color: var(--dark-mode-elements);
   border: none;
   outline: none;
   padding: 15px;
@@ -65,22 +92,41 @@ body {
   width: 100%;
 }
 
+.form-control.lightMode input {
+  background-color: var(--light-mode-elements);
+}
+
 .filter .form-control input::placeholder {
   color: white;
+}
+
+.form-control.lightMode input::placeholder{
+  color: var(--dark-mode-bg);
 }
 
 .filter .region-filter {
   width: 100%;
 }
 
+.region-filter.lightMode {
+  background-color: var(--light-mode-bg);
+  color: var(--light-mode-elements);
+}
+
 .filter .region-filter select {
-  background-color: hsl(209, 23%, 22%);
+  background-color: var(--dark-mode-elements);
   color: white;
   font-family: inherit;
   padding: 15px;
   border-radius: 5px;
   border: none;
 }
+
+.region-filter.lightMode select{
+  background-color: var(--light-mode-elements);
+  color: var(--dark-mode-bg);
+}
+
 
 /* Countries */
 .countries {
@@ -97,10 +143,14 @@ body {
 .country {
   width: 300px;
   box-shadow: 0 3px 15px rgba(0, 0, 0, 0.2);
-  background-color: hsl(209, 23%, 22%);
+  background-color: var(--dark-mode-elements);
   height: 340px;
   cursor: pointer;
   border-radius: 5px;
+}
+
+.country.lightMode{
+  background-color: var(--light-mode-elements);
 }
 
 .country .flag {
@@ -116,10 +166,15 @@ body {
 }
 
 .details {
-  background-color: hsl(209, 23%, 22%);
+  background-color: var(--dark-mode-elements);
   padding: 20px;
   border-radius: 0 0 5px 5px;
 }
+
+.details.lightMode{
+  background-color: var(--light-mode-elements);
+}
+
 
 .details h3 {
   padding-bottom: 15px;
@@ -136,10 +191,11 @@ body {
 
 /* CountryDetail */
 
-.btn-back, .border-country {
+.btn-back,
+.border-country {
   border: none;
   border-radius: 2px;
-  background-color: hsl(209, 23%, 22%);
+  background-color: var(--dark-mode-elements);
   color: rgba(255, 255, 255, 0.816);
   width: 100px;
   display: flex;
@@ -148,6 +204,12 @@ body {
   justify-content: center;
   padding: 5px;
   box-shadow: 0px 0px 3px 2px #1c1c1c3a;
+  cursor: pointer;
+}
+
+.btn-back.lightMode{
+  background-color: var(--light-mode-elements);
+  color: var(--dark-mode-elements);
 }
 
 .btn-back p {
@@ -161,60 +223,89 @@ body {
 }
 
 .country-detail {
-  display: flex;
-  flex-direction: column;
-  padding: 25px;
-  height: 100vh;
-  gap: 50px;
+  margin: 25px;
 }
 
 .country-detail-body {
   display: flex;
-  flex-direction: column;
+  max-width: 1400px;
+  justify-content: center;
   gap: 40px;
+  padding-top: 40px;
+  align-items: center;
 }
 
 .img-container {
+  flex: 0.5;
+}
+
+.img-container img {
   width: 100%;
   object-fit: 100%;
 }
 
-.info-container{
+.info-container {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  margin-bottom: 45px;
 }
 
-.info-container h3{
+.info h3 {
   padding-bottom: 20px;
   font-weight: 800;
   font-size: 20px;
 }
 
-.info-container p{
+.info-container p {
   padding-bottom: 10px;
   font-weight: 600;
   font-size: 15px;
 }
 
-.value{
+.value {
   font-weight: 300;
   padding-left: 4px;
 }
 
-.border-title{
+
+.border-title {
   font-size: 16px;
   font-weight: 600;
   margin: 20px 0 15px;
 }
 
-.border-countries{
+.border-countries {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-bottom: 20px;
 }
 
-.border-country{
-  width: 80px;
-  font-size: 14px;
-  font-weight: 300;
+.border-country {
+  padding: 10px;
+  display: inline-block;
+  margin: 10px;
+  cursor: pointer;
+}
+
+.border-country.lightMode{
+  background-color: var(--light-mode-elements);
+  color: var(--dark-mode-bg);
+}
+
+/* Mediaqueries CountryDetail */
+@media (min-width: 300px) and (max-width: 767px) {
+  .country-detail {
+    padding: 25px;
+  }
+  .country-detail-body {
+    flex-direction: column;
+  }
+
+  .info-container {
+    flex-direction: column;
+  }
+}
+
+@media (min-width: 767px) {
 }
