--- a/src/index.css
+++ b/src/index.css
@@ -90,6 +90,7 @@ img {
   border-radius: 5px;
   font-family: inherit;
   width: 100%;
+  box-shadow: 0 0 5px 0px #00000036;
 }
 
 .form-control.lightMode input {
@@ -120,6 +121,7 @@ img {
   padding: 15px;
   border-radius: 5px;
   border: none;
+  box-shadow: 0 0 5px 0px #00000036;
 }
 
 .region-filter.lightMode select{
@@ -163,6 +165,7 @@ img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 5px 5px 0 0;
 }
 
 .details {
