got api and added it to Country.js

--- a/src/index.css
+++ b/src/index.css
@@ -131,6 +131,11 @@ img {
 
 
 /* Countries */
+.grid-country{
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .countries {
   display: flex;
   gap: 35px;
@@ -138,7 +143,6 @@ img {
   max-width: 1400px;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
   margin: 0 auto;
 }
 
