got api for countryDetail and fixed border-countries in css

--- a/src/index.css
+++ b/src/index.css
@@ -218,6 +218,10 @@ img {
   cursor: pointer;
 }
 
+.btn-back{
+  margin-left: 15px;
+}
+
 .btn-back.lightMode{
   background-color: var(--light-mode-elements);
   color: var(--dark-mode-elements);
@@ -233,10 +237,6 @@ img {
   font-size: 25px;
 }
 
-.country-detail {
-  margin: 25px;
-}
-
 .country-detail-body {
   display: flex;
   max-width: 1400px;
@@ -248,6 +248,7 @@ img {
 
 .img-container {
   flex: 0.5;
+  width: 60%;
 }
 
 .img-container img {
@@ -261,6 +262,10 @@ img {
   margin-bottom: 45px;
 }
 
+.info{
+  width: 40%;
+}
+
 .info h3 {
   padding-bottom: 20px;
   font-weight: 800;
@@ -272,6 +277,8 @@ img {
   font-weight: 600;
   font-size: 15px;
 }
+
+
 
 .value {
   font-weight: 300;
@@ -288,8 +295,8 @@ img {
 .border-countries {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   margin-bottom: 20px;
+  flex-wrap: wrap;
 }
 
 .border-country {
@@ -306,9 +313,7 @@ img {
 
 /* Mediaqueries CountryDetail */
 @media (min-width: 300px) and (max-width: 767px) {
-  .country-detail {
-    padding: 25px;
-  }
+  
   .country-detail-body {
     flex-direction: column;
   }
